<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iProportions</string>
    <string name="flurry_apikey">4CXNBJB2TZZTDQD4QDZF</string>
    <string name="acra_formkey">dFdMZC1TUjZoZnkxaUdIZDBwaTdhdVE6MQ</string>
    <string name="action_settings">Settings</string>
    
    <!-- FONTS -->
    <string name="roboto_bold">roboto-bold.ttf</string>
    <string name="roboto_bolditalic">roboto-bolditalic.ttf</string>
    <string name="roboto_italic">roboto-italic.ttf</string>
    <string name="roboto_light">roboto-light.ttf</string>
    <string name="roboto_lightitalic">roboto-lightitalic.ttf</string>
    <string name="roboto_regular">roboto-regular.ttf</string>
    <string name="roboto_thin">roboto-thin.ttf</string>
    <string name="roboto_thinitalic">roboto-thinitalic.ttf</string>
    <string name="robotocondensed_bold">robotocondensed-bold.ttf</string>
    <string name="robotocondensed_bolditalic">robotocondensed-bolditalic.ttf</string>
    <string name="robotocondensed_italic">robotocondensed-italic.ttf</string>
    <string name="robotocondensed_regular">robotocondensed-regular.ttf</string>
    
    <!-- BUTTONS TEXT -->
    <string name="button_normal">Normal</string>
    <string name="button_invert">Inverse</string>
    
    <!-- TEXTS -->
    <string name="x">x</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    
    <string name="formula_normal_mode_1">x = ((b * c) / d)</string>
    <string name="formula_normal_mode_2">x = ((a * d) / c)</string>
    <string name="formula_normal_mode_3">x = ((a * d) / b)</string>
    <string name="formula_normal_mode_4">x = ((b * c) / a)</string>
    
    <string name="formula_invert_mode_1">x = ((c * d) / b)</string>
    <string name="formula_invert_mode_2">x = ((c * d) / a)</string>
    <string name="formula_invert_mode_3">x = ((a * b) / d)</string>
    <string name="formula_invert_mode_4">x = ((a * b) / c)</string>
    
    <string name="formula_title_normal_mode_1">x : c = b : d</string>
    <string name="formula_title_normal_mode_2">a : c = x : d</string>
    <string name="formula_title_normal_mode_3">a : x = b : d</string>
    <string name="formula_title_normal_mode_4">a : c = b : x</string>
    
    <string name="formula_title_invert_mode_1">x : c = d : b</string>
    <string name="formula_title_invert_mode_2">a : c = d : x</string>
    <string name="formula_title_invert_mode_3">a : x = d : b</string>
    <string name="formula_title_invert_mode_4">a : c = x : b</string>
    
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_c">C</string>
    <string name="key_dot">.</string>
    <string name="key_0">0</string>
</resources>